--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -7,7 +7,34 @@
     <title>Task Manager</title>
   </head>
   <body>
-    <h1></h1>
+    <nav>
+      <div class="logo">
+        <H1>Task Manager</H1>
+      </div>
+      <ul>
+        <li class="Active">
+          <a href="index.html">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#EFEFEF"><path d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z"/></svg>
+            Home
+          </a>
+        </li>
+        <li class="">
+          <a href="../FrontEnd/Html/User_Dash_Board.html">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#EFEFEF"><path d="M520-600v-240h320v240H520ZM120-440v-400h320v400H120Zm400 320v-400h320v400H520Zm-400 0v-240h320v240H120Zm80-400h160v-240H200v240Zm400 320h160v-240H600v240Zm0-480h160v-80H600v80ZM200-200h160v-80H200v80Zm160-320Zm240-160Zm0 240ZM360-280Z"/></svg>    
+          Users Dash Board
+          </a>
+        </li>
+        <li class="">
+          <a href="../FrontEnd/Html/Tasks.html">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#EFEFEF"><path d="M120-200v-240h720v240H120Zm0-320v-80h720v80H120Zm0-160v-80h720v80H120Z"/></svg>
+            Tasks
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <div class="main">
+      <H1>Main</H1>
+    </div>
   </body>
     <script src="./JavaScript/main.js"></script>
 </html>
